# advent-2024

./: .gitignore  .ocamlformat  README.md  aoc.opam  dune-project
inputs/: .gitignore
lib/: day.ml  day1.ml  day11.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  day9.ml  dune  utils.ml
